fix module_output compilation error (add @objc to module output protocol)

--- a/Code/Presenter/module_output.mcflurry.swift.liquid
+++ b/Code/Presenter/module_output.mcflurry.swift.liquid
@@ -2,6 +2,6 @@
 
 import ViperMcFlurryX
 
-protocol {{ prefix }}{{ module_info.name }}ModuleOutput: RamblerViperModuleOutput {
+@objc protocol {{ prefix }}{{ module_info.name }}ModuleOutput: RamblerViperModuleOutput {
 
 }
