add SwiftyViperMcFlurryEmbedStoryboard; small fixes;

--- a/Code/Interactor/interactor.swift.liquid
+++ b/Code/Interactor/interactor.swift.liquid
@@ -2,6 +2,14 @@
 
 class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput {
 
+    // MARK: VIPER Vars
+
     weak var output: {{ prefix }}{{ module_info.name }}InteractorOutput!
+
+    // MARK: Logic Vars
+    // TODO
+
+    // MARK: {{ prefix }}{{ module_info.name }}InteractorInput
+    // TODO
 
 }
