--- a/Code/Router/router.swift.liquid
+++ b/Code/Router/router.swift.liquid
@@ -2,4 +2,10 @@
 
 class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
 
+    // MARK: Logic Vars
+    // TODO
+
+    // MARK: {{ prefix }}{{ module_info.name }}RouterInput
+    // TODO
+
 }
