--- a/Code/Presenter/presenter.mcflurry.embed.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.embed.swift.liquid
@@ -23,7 +23,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, {{ prefix }}{{ modu
     // MARK: {{ prefix }}{{module_info.name}}ViewOutput
 
     func viewIsReady() {
-
+        router.embedSomeModule()
     }
 
     // MARK: {{ prefix }}{{module_info.name}}ModuleInput
