--- a/Code/View/tabbar.view_controller.swift.liquid
+++ b/Code/View/tabbar.view_controller.swift.liquid
@@ -4,7 +4,12 @@ import UIKit
 
 class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ prefix }}{{module_info.name}}ViewInput {
 
+    // MARK: VIPER Vars
+
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
+
+    // MARK: Logic Vars
+    // TODO
 
     // MARK: Life cycle
 
@@ -15,9 +20,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ p
     }
 
     // MARK: {{ prefix }}{{module_info.name}}ViewInput
-
-    func setupInitialState() {
-    }
+    // TODO
 
     // MARK: UI Actions
+    // TODO
 }
