--- a/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
+++ b/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
@@ -14,7 +14,7 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerVip
 
     private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController) {
 
-        guard viewController.output == nil else {
+        guard viewController.output == nil else { // prevent double configuration
             return
         }
 
