--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -10,7 +10,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, {{ prefix }}{{ modu
     var interactor: {{ prefix }}{{ module_info.name }}InteractorInput!
     var router: {{ prefix }}{{ module_info.name }}RouterInput!
 
-    // MARK: Logic Vars
+    // MARK: Vars
     // TODO
 
     // MARK: {{ prefix }}{{module_info.name}}ViewOutput
