--- a/Code/Router/router.mcflurry.swift.liquid
+++ b/Code/Router/router.mcflurry.swift.liquid
@@ -9,7 +9,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
     weak var calleeOutput: (RamblerViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
     weak var transitionHandler: RamblerViperModuleTransitionHandlerProtocol!
 
-    // MARK: Logic Vars
+    // MARK: Vars
     // TODO
 
     // MARK: {{ prefix }}{{ module_info.name }}RouterInput
