--- a/Code/Router/router.swift.liquid
+++ b/Code/Router/router.swift.liquid
@@ -2,7 +2,7 @@
 
 class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
 
-    // MARK: Logic Vars
+    // MARK: Vars
     // TODO
 
     // MARK: {{ prefix }}{{ module_info.name }}RouterInput
