--- a/Code/View/view_controller.swift.liquid
+++ b/Code/View/view_controller.swift.liquid
@@ -8,7 +8,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {{ pre
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Logic Vars
+    // MARK: Outlets
+    // TODO
+
+    // MARK: Vars
     // TODO
 
     // MARK: Life cycle
