--- a/Code/Presenter/module_output.mcflurry.swift.liquid
+++ b/Code/Presenter/module_output.mcflurry.swift.liquid
@@ -2,6 +2,7 @@
 
 import ViperMcFlurryX
 
-@objc protocol {{ prefix }}{{ module_info.name }}ModuleOutput: RamblerViperModuleOutput {
+@objc 
+protocol {{ prefix }}{{ module_info.name }}ModuleOutput: RamblerViperModuleOutput {
 
 }
