--- a/Code/View/tabbar.view_controller.swift.liquid
+++ b/Code/View/tabbar.view_controller.swift.liquid
@@ -8,7 +8,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ p
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Logic Vars
+    // MARK: Vars
     // TODO
 
     // MARK: Life cycle
