add viewController.moduleInput = presenter to configure(); add inheritance of presenter from RamblerViperModuleInput and its implementation; add inheritance of all protocols from 'class';

--- a/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
+++ b/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
@@ -29,6 +29,7 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerVip
 
         presenter.interactor = interactor
         viewController.output = presenter
+        viewController.moduleInput = presenter
 
         router.transitionHandler = viewController
         router.calleeOutput = presenter
