--- a/Code/Interactor/interactor_input.swift.liquid
+++ b/Code/Interactor/interactor_input.swift.liquid
@@ -2,6 +2,6 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}InteractorInput {
+protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
 
 }
