--- a/Code/Router/router_input.swift.liquid
+++ b/Code/Router/router_input.swift.liquid
@@ -2,6 +2,6 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}RouterInput {
+protocol {{ prefix }}{{ module_info.name }}RouterInput: class {
 
 }
