--- a/Code/View/tabbar.view_controller.swift.liquid
+++ b/Code/View/tabbar.view_controller.swift.liquid
@@ -8,6 +8,9 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ p
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
+    // MARK: Outlets
+    // TODO
+
     // MARK: Vars
     // TODO
 
