--- a/Code/View/view_output.swift.liquid
+++ b/Code/View/view_output.swift.liquid
@@ -1,6 +1,6 @@
 {% include 'header' %}
 
-protocol {{ prefix }}{{ module_info.name }}ViewOutput {
+protocol {{ prefix }}{{ module_info.name }}ViewOutput: class {
 
     func viewIsReady()
 }
