--- a/Code/Router/router_input.mcflurry.embed.swift.liquid
+++ b/Code/Router/router_input.mcflurry.embed.swift.liquid
@@ -2,7 +2,7 @@
 
 import Foundation
 
-protocol {{ prefix }}{{ module_info.name }}RouterInput {
+protocol {{ prefix }}{{ module_info.name }}RouterInput: class {
 
     func embedSomeModule()
 
