--- a/Tests/Presenter/presenter_tests.embed.swift.liquid
+++ b/Tests/Presenter/presenter_tests.embed.swift.liquid
@@ -15,10 +15,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
     }
 
     class MockInteractor: {{ prefix }}{{ module_info.name }}InteractorInput {
-
+        
         // MARK: Vars
         // TODO
-
+        
         // MARK: {{ prefix }}{{ module_info.name }}InteractorInput
         // TODO
 
@@ -30,7 +30,8 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
         // TODO
 
         // MARK: {{ prefix }}{{ module_info.name }}RouterInput
-        // TODO
+        
+        func embedSomeModule() { }
 
     }
 
@@ -38,7 +39,7 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
         
         // MARK: Vars
         // TODO
-        
+
         // MARK: {{ prefix }}{{ module_info.name }}ViewInput
         // TODO
 
