--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -2,6 +2,6 @@
 //  {{ module_info.file_name }}
 //  {{ module_info.project_name }}
 //
-//  Created by {{ developer.name }} on {{ date }}.
-//  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
+//  Created by {{ developer.name }}.
+//  Copyright © {{ year }}-present {{ developer.company }}. All rights reserved.
 //
