## 1.4.0 ### Added * Add support for module state * Add soft module shutdown by calling ```willDeinit``` of presenter using [OnDeallocateX](https://github.com/ladeiko/OnDeallocateX) * Support for custom parameter ```extended_configure:true``` * More asserts

--- a/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
+++ b/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
@@ -2,6 +2,7 @@
 
 import UIKit
 import ViperMcFlurryX
+import OnDeallocateX
 
 class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerViperModuleFactoryProtocol {
 
@@ -33,6 +34,10 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerVip
 
         router.transitionHandler = viewController
         router.calleeOutput = presenter
+
+        viewController.onWillDeallocate {
+            presenter.willDeinit()
+        }
     }
 
     func create() -> UIViewController {
