--- a/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
@@ -4,6 +4,12 @@ import Foundation
 import ViperMcFlurryX
 import CacheTracker
 
+fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState {
+    case initial
+    case ready
+    case deinitialized
+}
+
 class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleInput, {{ prefix }}{{ module_info.name }}ModuleInput, {{ prefix }}{{ module_info.name }}ViewOutput, {{ prefix }}{{ module_info.name }}InteractorOutput, RamblerViperModuleOutput {
 
     // MARK: VIPER Vars
@@ -12,9 +18,22 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
     var interactor: {{ prefix }}{{ module_info.name }}InteractorInput!
     var router: {{ prefix }}{{ module_info.name }}RouterInput!
     weak var output: {{ prefix }}{{module_info.name}}ModuleOutput?
-    
+    private final var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
+
     // MARK: Vars
     // TODO
+
+    // MARK: Life cycle
+
+    func willDeinit() {
+        if state == .ready {
+            if interactor.isDeliveringModelsListChanges() {
+                interactor.stopDeliveringModelsListChanges()
+            }
+            // TODO
+        }
+        state = .deinitialized
+    }
     
     // MARK: RamblerViperModuleInput
 
@@ -25,27 +44,36 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
     // MARK: {{ prefix }}{{module_info.name}}ViewOutput
 
     func viewIsReady() {
+        assert(state == .ready)
         if !interactor.isDeliveringModelsListChanges() {
             interactor.startDeliveringModelsListChanges()
         }
         else {
             view.loadInitialModelsList(interactor.initialStateOfModelsList())
         }
+        // TODO
     }
 
     // MARK: {{ prefix }}{{module_info.name}}ModuleInput
-
+    {% if custom_parameters.extended_configure %}
+    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {
+    {% else %}
     func configure() {
-
+        {% endif -%}
+        assert(state == .initial)
+        state = .ready
+        // TODO
     }
 
     // MARK: {{ prefix }}{{ module_info.name }}InteractorOutput
     
     func modelsListDidReset(_ initialState: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
+        guard state == .ready else { return }
         view.loadInitialModelsList(initialState)
     }
 
     func modelsListDidChange(_ changes: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
+        guard state == .ready else { return }
         view.applyModelsListChanges(changes)
     }
 }
